<resources>
    <string name="app_name">POS V2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="strawberry">Strawberry</string>
    <string name="cheese">Cheese</string>
    <string name="tshirt">T-Shirt</string>
    <string name="pants">Pants</string>
    <string name="socks">Socks</string>
    <string name="shoes">Shoes</string>
    <string name="dress">Dress</string>
    <string name="lego">Lego</string>
    <string name="battery">Battery</string>
    <string name="lotion">Lotion</string>
    <string name="book">Book</string>
    <string name="milk">Milk</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>

    <string name="total">Total</string>
    <string name="subtotal">Sub-Total</string>
    <string name="tax">Tax</string>
    <string name="per">Clear</string>
    <string name="bogo">1/2 OFF</string>
    <string name="pay">Pay</string>
    <string name="zero">$0.00</string>
    <string name="splash">Point of Sale V2 By Taylar Masson and Kieran Haberstock</string>


    <string-array name="items">
        <item>Apple</item>
        <item>Banana</item>
        <item>Strawberry</item>
        <item>Cheese</item>
        <item>T-Shirt</item>
        <item>Pants</item>
        <item>Socks</item>
        <item>Shoes</item>
        <item>Dress</item>
        <item>Lego</item>
        <item>Battery</item>
        <item>Lotion</item>
        <item>Book</item>
        <item>Milk</item>
        <item>Beef</item>
        <item>Chicken</item>
    </string-array>
    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>
